// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabPanel /> should accept className 1`] = `
<div
  className="foobar"
/>
`;

exports[`<TabPanel /> should allow for higher-order components 1`] = `
<div
  className="react-tabs__tab-panel"
/>
`;

exports[`<TabPanel /> should have sane defaults 1`] = `
<div
  className="react-tabs__tab-panel"
>
  Hola
</div>
`;

exports[`<TabPanel /> should not allow overriding all default properties 1`] = `
<div
  className="react-tabs__tab-panel"
  role="micro-tab"
/>
`;

exports[`<TabPanel /> should pass through custom properties 1`] = `
<div
  className="react-tabs__tab-panel"
  data-tooltip="Tooltip contents"
/>
`;

exports[`<TabPanel /> should render when forced 1`] = `
<div
  className="react-tabs__tab-panel"
  forceRender={true}
>
  Hola
</div>
`;

exports[`<TabPanel /> should render when selected 1`] = `
<div
  className="react-tabs__tab-panel react-tabs__tab-panel--selected"
>
  Hola
</div>
`;

exports[`<TabPanel /> should support being selected 1`] = `
<div
  className="react-tabs__tab-panel react-tabs__tab-panel--selected"
  id="abcd"
  tabId="1234"
>
  Hola
</div>
`;

exports[`<TabPanel /> should support being selected with custom class name 1`] = `
<div
  className="react-tabs__tab-panel selected"
  id="abcd"
  tabId="1234"
>
  Hola
</div>
`;
